[project]
name = "yfinancemgr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas-stubs>=2.3.0.250703",
    "rich==13.7.1",
    "yfinance>=0.2.64",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
