[project]
name = "yfinancemgr"
version = "0.1.0"
description = "A Python tool for downloading and visualizing stock portfolio transactions using Yahoo Finance data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pandas-stubs>=2.3.0.250703",
    "rich==13.7.1",
    "yfinance>=0.2.64",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "pytest-cov>=6.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
